--- a/Task 3/style.css
+++ b/Task 3/style.css
@@ -1,25 +1,34 @@
-.box:nth-child(even) {
-  background: blue;
+.container {
+  position: relative;
 }
 
-/* .box {
+div:nth-child(even of .box) {
+  /* position: absolute; */
+  background-color: green;
+  width: 50px;
+  height: 50px;
+  border: 1px solid black;
+  top: 25px;
+}
+
+.container:last-child {
+  margin-right: 0;
+}
+
+.box {
   display: inline-block;
-  
-  margin: 10px;
+  position: relative;
+  background-color: #fffe01;
+  width: 50px;
+  height: 50px;
+  border: 1px solid black;
+  margin-right: 15px;
+}
+/* .box::after {
+  content: "";
+  position: absolute;
+  background-color: green;
   width: 50px;
   height: 50px;
   border: 1px solid black;
 } */
-
-.box {
-  display: inline-block;
-  margin: 10px;
-}
-
-.box div {
-  background: green;
-  width: 50px;
-  height: 50px;
-  border: 1px solid black;
-  margin-bottom: 15px;
-}
